Scrollbars-fix&update

--- a/client/src/styles/_leftMenu.scss
+++ b/client/src/styles/_leftMenu.scss
@@ -145,13 +145,13 @@
     border: 3px solid #ffffff;
   }
 
-        @media (max-height: 650px) {
-            height: 50%;
-        }
+        // @media (max-height: 650px) {
+        //     height: 50%;
+        // }
 
-        @media (max-height: 450px) {
-            height: 40%;
-        }
+        // @media (max-height: 450px) {
+        //     height: 40%;
+        // }
 
         img {
             width: 2.5rem;
