--- a/client/src/styles/_topMenu.scss
+++ b/client/src/styles/_topMenu.scss
@@ -6,7 +6,7 @@
     border-bottom: 2px solid rgba(51, 51, 51, 0.09);
     border-left: 2px solid rgba(51, 51, 51, 0.09);
     display: flex;
-    z-index: 2;
+    z-index: 3;
     background-color: #FFF;
 
     @media (max-width: 1000px) {
