--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -9,4 +9,52 @@ html, body {
     padding: 0;
     box-sizing: border-box;
     max-width: 100%;
+
+       /* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  & {
+    scrollbar-width: thin;
+    scrollbar-color: #0099ff white;
+  }
+
+  /* Chrome, Edge, and Safari */
+  &::-webkit-scrollbar {
+    width: 16px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: white;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #0099ff;
+    border-radius: 12px;
+    border: 3px solid white;
+  }
+
+  
+}
+
+.bodyScroll {
+    /* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  & {
+    scrollbar-width: thin;
+    scrollbar-color: #0099ff #333 !important;
+  }
+
+  /* Chrome, Edge, and Safari */
+  &::-webkit-scrollbar {
+    width: 16px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: #333 !important;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #0099ff;
+    border-radius: 12px;
+    border: 3px solid #333 !important;
+  }
 }
